--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "coffee-or-wine",
   "version": "1.0.0",
-  "description": "",
+  "description": "when you're in the mood - find coffee or wine",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
