--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/morgan": "^1.9.2",
+    "express": "^4.17.1",
+    "helmet": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "morgan": "^1.10.0",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
