--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "coffee-or-wine",
   "version": "1.0.0",
   "description": "when you're in the mood - find coffee or wine",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/morgan": "^1.9.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0"
   },
   "devDependencies": {
+    "@types/morgan": "^1.9.2",
     "@types/express": "^4.17.8",
     "morgan": "^1.10.0",
     "ts-node": "^9.0.0",
