--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "when you're in the mood - find coffee or wine",
   "main": "app.ts",
   "scripts": {
+    "start": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
