--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.2.0"
+    "helmet": "^4.2.0",
+    "nunjucks": "^3.2.2"
   },
   "devDependencies": {
     "@types/morgan": "^1.9.2",
