--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "nunjucks": "^3.2.2"
   },
   "devDependencies": {
-    "@types/morgan": "^1.9.2",
     "@types/express": "^4.17.8",
+    "@types/morgan": "^1.9.2",
+    "@types/nunjucks": "^3.1.3",
     "morgan": "^1.10.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
