--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.2.0",
-    "nunjucks": "^3.2.2"
+    "helmet": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
